--- a/src/main/webapp/styles/profile.css
+++ b/src/main/webapp/styles/profile.css
@@ -1,7 +1,3 @@
-.extended .profile {
-  display: block;
-}
-
 .profile {
   background-color: rgba(255, 255, 255, 0.2);
   box-shadow: 0 1px 2px rgba(0,0,0,0.15);
@@ -13,9 +9,13 @@
   display: none;
 }
 
+.extended .profile {
+  display: block;
+}
+
 .profile-name {
   font-weight: bold;
-  font-size: 110%;
+  font-size: 130%;
 }
 
 .profile-img {
